--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=spring-web-mvc
 server.port=8181
-
 spring.servlet.multipart.enabled=true
+server.error.whitelabel.enabled=false
